package me.foly.si.core;

public interface IAssetsManager<TImage> {
    TImage getAsset(String imgSrc);
}
